revised week 1 work

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -15,9 +15,9 @@
             <div class="i-am">
                 <h3>I am</h3>
                 <u1 class="about-list">
-                    <li class="about-list-item">An engineer</li>
-                    <li class="about-list-item">An reader</li>
-                    <li class="about-list-item">An hobby cook</li>
+                    <li class="about-list-item">An computer engineering student</li>
+                    <li class="about-list-item">A reader</li>
+                    <li class="about-list-item">An adventurer</li>
                 </u1>
             </div>
 
@@ -25,7 +25,7 @@
                 <h3>I like to</h3>
                 <u1 class="about-list">
                     <li class="about-list-item">Meet new people</li>
-                    <li class="about-list-item">Play guitar</li>
+                    <li class="about-list-item">Play piano</li>
                     <li class="about-list-item">Eat Icecream</li>
                 </u1>
             </div>
