week 2 step 2 - adds button that creates an alert when clicked

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,7 +10,9 @@
     <div id="content">
       <h1>Bella Huang's Portfolio</h1>
       <p>My name is Bella and I love coding!</p>
-
+        <button onclick="showAlert();">
+            Get Alert
+        </button>
         <div class="about-grid">
             <div class="i-am">
                 <h3>I am</h3>
