--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,14 +10,17 @@
     <div id="content">
       <h1>Bella Huang's Portfolio</h1>
       <p>My name is Bella and I love coding!</p>
-        <button onclick="showAlert();">
+      <p>Click on the button to see a message!</p>
+        <button onclick="showMessage();">
             Get Alert
         </button>
+        <p id="message-container"></p>
+        <p>Click <a href="/date">here</a> to see the server response directly.</p>
         <div class="about-grid">
             <div class="i-am">
                 <h3>I am</h3>
                 <u1 class="about-list">
-                    <li class="about-list-item">An computer engineering student</li>
+                    <li class="about-list-item">A computer engineering student</li>
                     <li class="about-list-item">A reader</li>
                     <li class="about-list-item">An adventurer</li>
                 </u1>
